# web_player

./: Cargo.toml  README.md
src/: file_browser.rs  main.rs  utils.rs
static/: index.css  index.js
templates/: file_tree.html  footer.html  header.html  index.html  login.html
