[package]
authors = ["Alexander Smoktal"]
name = "webrtc_player"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-identity = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web = "4.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = "1.0"
serde_json = "1.0"
tinytemplate = "1.2"
